[gd_scene load_steps=4 format=2]

[ext_resource path="res://scn/human.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]

[node name="human" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )
speed = 30

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="1m" type="Area2D" parent="."]

[node name="1mCollision" type="CollisionShape2D" parent="1m"]
shape = SubResource( 2 )

[node name="Recover" type="Timer" parent="."]
wait_time = 14.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="1m" to="." method="_on_1m_body_entered"]
[connection signal="timeout" from="Recover" to="." method="_on_Recover_timeout"]
